Fix spacing on footer lists

--- a/src/nationalarchives/components/footer/footer.scss
+++ b/src/nationalarchives/components/footer/footer.scss
@@ -105,6 +105,7 @@
       }
 
       &-items {
+        margin-top: 0;
       }
 
       &-item {
